Issue/8580-Scrollbar-issue (#9624)
* #8580 Scrollbar issue.
Fixes #8580

* #9599 A survey with question numbering raises an error when switching to the Preview page
Fixes #9599

* #8580

* #8580 Scrollbar issue.
Fixes #8580

* #8580 - fixed tests

* #8580 - fix f-test

* #8580 Scrollbar issue.
Fixes #8580

* #8580 - fix angular build

* #8580 - disablable scroll

* #8580 - fixed tests

* #8580 - screenshots

* try to fix angular, #8580

* #8580 fix angular

* #8580 - fix angular f-tests for sortablejs

--- a/packages/survey-core/src/default-theme/default.fontless.scss
+++ b/packages/survey-core/src/default-theme/default.fontless.scss
@@ -14,6 +14,7 @@
 @use "blocks/sv-brand-info.scss";
 @use "blocks/sv-ranking.scss";
 @use "blocks/sv-list.scss";
+@use "blocks/sv-scroll.scss";
 @use "blocks/sv-save-data.scss";
 @use "blocks/sv-string-viewer.scss";
 
@@ -120,10 +121,9 @@ body {
   position: static;
   width: 100%;
   height: 100%;
-
   form {
-    overflow: auto;
     width: 100%;
+    height: 100%;
     max-height: 100%;
   }
 }
